Fix navbar overlapping scrollbar.

--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -39,6 +39,7 @@
         padding: 0;
         .navbar-collapse{
             padding: 0;
+            margin-right: 15px;
         }
     }
 
